# DataPortraits

./: CMakeLists.txt  README.md  benchmark.cpp  reproduce.sh
Test/: CMakeLists.txt
dataset/ag_news_csv/: test.txt
dataset/gpt-neo/540L_50TOPK_2.7B/: config.txt
src/: CMakeLists.txt
src/MultipleManager/: MultipleManager.h
src/MyClass/: MyClass.h
src/common/: define.h
src/dataloader/: dataloader.cpp  dataloader.h
src/filter/: bloom_filter.cpp  bloom_filter.h  strided_bloom_filter.cpp  strided_bloom_filter.h
src/utils/: string_util.cpp  string_util.h  task_queue.cpp  task_queue.h
test/: CMakeLists.txt  bloom_filter_test.cpp  dataloader_test.cpp  dataset_test.cpp  strided_bloom_filter_test.cpp  string_util_test.cpp
